<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:text="@string/welcometext"
        android:textAlignment="center"
        android:textSize="30sp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/userid"
            android:layout_width="67dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/useridText"
            android:layout_toStartOf="@+id/useridText"
            android:text="@string/user_id" />

        <EditText
            android:id="@+id/useridText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="viewStart" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/pwview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/passwordText"
            android:layout_toStartOf="@+id/passwordText"
            android:text="@string/password" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/remember" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_weight="1.5"
        android:gravity="center_vertical|center_horizontal|center">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:onClick="login"
            android:text="@string/log_inbutton" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/button"
            android:onClick="signup"
            android:text="@string/create" />

    </RelativeLayout>

</LinearLayout>